--- a/algorithm.html
+++ b/algorithm.html
@@ -110,7 +110,7 @@
     <nav>
         <div style="text-align: center;">
             <a href="index1.html">Главная</a>
-            <a href="index.html">Паспорт</a>
+            <a href="index.html">Каталог</a>
             <a href="form.html">Заказать книгу</a>
             <a href="algorithm.html" class="active">Алгоритмическая задача</a>
         </div>
@@ -124,11 +124,11 @@
             <div class="task-condition">
                 <p><strong>Задача:</strong> Рассчитать стоимость реставрации редкой книги</p>
                 <p><strong>Дано:</strong></p>
-                <ul>
+                <ol>
                     <li>Тип издания: инкунабула, первое издание, рукопись, книга с автографом</li>
                     <li>Состояние книги: отличное, хорошее, удовлетворительное</li>
                     <li>Объем работ: количество страниц для реставрации</li>
-                </ul>
+                </ol>
                 <p><strong>Найти:</strong> Общую стоимость реставрационных работ</p>
             </div>
         </div>
@@ -146,7 +146,6 @@
                         <option value="autograph">Книга с автографом</option>
                     </select>
                 </div>
-
                 <div class="form-group">
                     <label for="bookCondition">Состояние книги:</label>
                     <select id="bookCondition" name="bookCondition" required>
