--- a/index1.html
+++ b/index1.html
@@ -49,6 +49,8 @@
             color: #8b6b47;
             border-bottom: 2px solid #d9c7a8;
             padding-bottom: 10px;
+            scroll-margin-top: 20px;
+
         }
 
         .book-image {
@@ -142,6 +144,49 @@
             border-radius: 3px;
             font-size: 14px;
         }
+
+        .quick-nav {
+            background-color: white;
+            padding: 15px;
+            border-radius: 10px;
+            margin: 20px 0;
+            box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
+            text-align: center;
+        }
+
+        .quick-nav a {
+            color: #a67c52;
+            text-decoration: none;
+            margin: 0 15px;
+            padding: 5px 10px;
+            border: 1px solid #a67c52;
+            border-radius: 3px;
+        }
+
+        .quick-nav a:hover {
+            background-color: #a67c52;
+            color: white;
+        }
+
+        .back-to-main {
+            text-align: center;
+            margin-top: 30px;
+            padding: 20px;
+        }
+
+        .back-to-main a {
+            display: inline-block;
+            background-color: #a67c52;
+            color: white;
+            padding: 10px 20px;
+            text-decoration: none;
+            border-radius: 5px;
+            font-size: 16px;
+        }
+
+        .back-to-main a:hover {
+            background-color: #8b6b47;
+        }
     </style>
 </head>
 
@@ -149,7 +194,7 @@
     <nav>
         <div style="text-align: center;">
             <a href="index1.html" class="active">Главная</a>
-            <a href="index.html">Паспорт</a>
+            <a href="index.html">Каталог</a>
             <a href="form.html">Заказать книгу</a>
             <a href="algorithm.html">Алгоритмическая задача</a>
         </div>
@@ -158,11 +203,19 @@
     <div class="container">
         <h1>Добро пожаловать в мир редких книг!</h1>
 
+
+        <div class="quick-nav">
+            <a href="#about">О коллекции</a>
+            <a href="#features">Возможности</a>
+            <a href="#catalog">Каталог</a>
+            <a href="#contacts">Контакты</a>
+        </div>
+
         <div class="book-image">
             <img src="books.png" alt="Коллекция редких книг">
         </div>
 
-        <div class="welcome-section">
+        <div class="welcome-section" id="about">
             <h2>О нашей коллекции</h2>
             <p>Мы собираем уникальные и редкие книги разных эпох. Наша коллекция включает в себя:</p>
             <ul>
@@ -173,28 +226,28 @@
             </ul>
         </div>
 
-        <div class="features">
+        <div class="features" id="features">
             <div class="feature-item">
                 <h3>📚 Виды редких книг</h3>
                 <p>Узнайте о разных типах редких изданий и их особенностях</p>
-                <a href="https://lala.lanbook.com/samye-redkie-knigi-v-mire">Узнать
-                    больше</a>
+                <a href="https://lala.lanbook.com/samye-redkie-knigi-v-mire" class="feature-link">Узнать больше</a>
             </div>
 
             <div class="feature-item">
                 <h3>🖋️ Заказать книгу</h3>
                 <p>Выберите редкое издание для своей коллекции</p>
-                <a href="form.html">Сделать заказ</a>
+                <a href="form.html" class="feature-link">Сделать заказ</a>
             </div>
 
             <div class="feature-item">
                 <h3>📖 История книгопечатания</h3>
                 <p>Познакомьтесь с историей развития книгопечатания</p>
-                <a href="https://komo.ru/interesnoe-chtenie/istoriya-razvitiya-knigopechataniya/">Читать историю</a>
+                <a href="https://komo.ru/interesnoe-chtenie/istoriya-razvitiya-knigopechataniya/"
+                    class="feature-link">Читать историю</a>
             </div>
         </div>
 
-        <div class="book-table-section">
+        <div class="book-table-section" id="catalog">
             <h2>Каталог редких изданий</h2>
 
             <table>
@@ -268,7 +321,37 @@
                 </tbody>
             </table>
         </div>
+
+        <div class="welcome-section" id="contacts">
+            <h2>Контакты</h2>
+            <p>Для получения дополнительной информации о нашей коллекции редких книг:</p>
+            <ul>
+                <li>Телефон: +7 (495) 123-45-67</li>
+                <li>Email: rarebooks@collection.ru</li>
+                <li>Адрес: Москва, ул. Книжная, д. 15</li>
+                <li>Часы работы: Пн-Пт 10:00-18:00</li>
+            </ul>
+        </div>
+        <div class="back-to-main">
+            <a href="index1.html">Вернуться на главную страницу</a>
+        </div>
     </div>
+
+    <script>
+
+        document.querySelectorAll('a[href^="#"]').forEach(anchor => {
+            anchor.addEventListener('click', function (e) {
+                e.preventDefault();
+                const target = document.querySelector(this.getAttribute('href'));
+                if (target) {
+                    target.scrollIntoView({
+                        behavior: 'smooth',
+                        block: 'start'
+                    });
+                }
+            });
+        });
+    </script>
 </body>
 
 </html>
